lib/usParser.js
// Generated from us.g4 by ANTLR 4.7.2
// jshint ignore: start
var antlr4 = require('antlr4/index');
var usListener = require('./usListener').usListener;
var usVisitor = require('./usVisitor').usVisitor;

var grammarFileName = "us.g4";




var atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

var decisionsToDFA = atn.decisionToState.map( function(ds, index) { return new antlr4.dfa.DFA(ds, index); });

var sharedContextCache = new antlr4.PredictionContextCache();

var literalNames = [ null, "'hey'", "'byes'", "'yupyup'", "'nop'", "'...'", 
                     "'is'", "'Words'", "'Number'", "'Answer'", "'sup'", 
                     "'woah'", "'cosplay'", "'as'", "'same'", "'diff'", 
                     "'big'", "'small'", "'also'", "'or'", "'nah'", "'anw'", 
                     "'?'", "'yay!'", "'gosh'", "'ugh!'", "'hides'", "'til'", 
                     "'gotcha!'", "'huh'", "'stop!'", "'gimme'", "'friend'", 
                     "'with'", "','", "':'", "'hihi!'", "'summons'", "'meanie'", 
                     "';'", "'('", "')'", "'+'", "'-'", "'*'", "'/'", "'%'", 
                     "'^'" ];

var symbolicNames = [ null, "START_PROGRAM", "END_PROGRAM", "TRUE", "FALSE", 
                      "NULL", "ASSIGNMENT", "TSTRING", "TNUMBER", "TBOOLEAN", 
                      "VAR_DECL", "VAR_DECL_ASSGN", "VAR_CAST", "VAR_CAST_TO", 
                      "COMPARE_EQUAL", "COMPARE_NOT_EQUAL", "COMPARE_GREATER", 
                      "COMPARE_SMALLER", "LOGICAL_AND", "LOGICAL_OR", "LOGICAL_NOT", 
                      "IF", "CONDITION_SUFFIX", "IF_SUFFIX", "ELSE", "ELSE_SUFFIX", 
                      "FOR", "FOR_TERMINATOR", "FOR_SUFFIX", "WHILE", "WHILE_SUFFIX", 
                      "RETURN", "FUNCTION", "FUNCTION_ARGS", "FUNCTION_ARGS_SEP", 
                      "FUNCTION_DECL_SUFFIX", "FUNCTION_SUFFIX", "FUNCTION_CALL", 
                      "MEANIE_PROGRAM", "SEMICOLON", "LPAREN", "RPAREN", 
                      "PLUS", "MINUS", "MULTIPLY", "DIVIDE", "MOD", "POWER", 
                      "NUMBER", "STRING", "LABEL", "COMMENT", "MULTI_LINE_COMMENT", 
                      "UNKNOWN" ];

var ruleNames =  [ "program", "meanie_instruction", "code_block", "statement", 
                   "comment", "declaration", "assignment", "expression", 
                   "casting", "type_specifiers", "multiplying_expression", 
                   "pow_expression", "signed_atom", "atom", "condition_block", 
                   "for_block", "while_block", "conditional_expression", 
                   "and_chained_conditional_expression", "single_conditional_expression", 
                   "return_statement", "function_decl", "function_call" ];

function usParser (input) {
	antlr4.Parser.call(this, input);
    this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
    this.ruleNames = ruleNames;
    this.literalNames = literalNames;
    this.symbolicNames = symbolicNames;
    return this;
}

usParser.prototype = Object.create(antlr4.Parser.prototype);
usParser.prototype.constructor = usParser;

Object.defineProperty(usParser.prototype, "atn", {
	get : function() {
		return atn;
	}
});

usParser.EOF = antlr4.Token.EOF;
usParser.START_PROGRAM = 1;
usParser.END_PROGRAM = 2;
usParser.TRUE = 3;
usParser.FALSE = 4;
usParser.NULL = 5;
usParser.ASSIGNMENT = 6;
usParser.TSTRING = 7;
usParser.TNUMBER = 8;
usParser.TBOOLEAN = 9;
usParser.VAR_DECL = 10;
usParser.VAR_DECL_ASSGN = 11;
usParser.VAR_CAST = 12;
usParser.VAR_CAST_TO = 13;
usParser.COMPARE_EQUAL = 14;
usParser.COMPARE_NOT_EQUAL = 15;
usParser.COMPARE_GREATER = 16;
usParser.COMPARE_SMALLER = 17;
usParser.LOGICAL_AND = 18;
usParser.LOGICAL_OR = 19;
usParser.LOGICAL_NOT = 20;
usParser.IF = 21;
usParser.CONDITION_SUFFIX = 22;
usParser.IF_SUFFIX = 23;
usParser.ELSE = 24;
usParser.ELSE_SUFFIX = 25;
usParser.FOR = 26;
usParser.FOR_TERMINATOR = 27;
usParser.FOR_SUFFIX = 28;
usParser.WHILE = 29;
usParser.WHILE_SUFFIX = 30;
usParser.RETURN = 31;
usParser.FUNCTION = 32;
usParser.FUNCTION_ARGS = 33;
usParser.FUNCTION_ARGS_SEP = 34;
usParser.FUNCTION_DECL_SUFFIX = 35;
usParser.FUNCTION_SUFFIX = 36;
usParser.FUNCTION_CALL = 37;
usParser.MEANIE_PROGRAM = 38;
usParser.SEMICOLON = 39;
usParser.LPAREN = 40;
usParser.RPAREN = 41;
usParser.PLUS = 42;
usParser.MINUS = 43;
usParser.MULTIPLY = 44;
usParser.DIVIDE = 45;
usParser.MOD = 46;
usParser.POWER = 47;
usParser.NUMBER = 48;
usParser.STRING = 49;
usParser.LABEL = 50;
usParser.COMMENT = 51;
usParser.MULTI_LINE_COMMENT = 52;
usParser.UNKNOWN = 53;

usParser.RULE_program = 0;
usParser.RULE_meanie_instruction = 1;
usParser.RULE_code_block = 2;
usParser.RULE_statement = 3;
usParser.RULE_comment = 4;
usParser.RULE_declaration = 5;
usParser.RULE_assignment = 6;
usParser.RULE_expression = 7;
usParser.RULE_casting = 8;
usParser.RULE_type_specifiers = 9;
usParser.RULE_multiplying_expression = 10;
usParser.RULE_pow_expression = 11;
usParser.RULE_signed_atom = 12;
usParser.RULE_atom = 13;
usParser.RULE_condition_block = 14;
usParser.RULE_for_block = 15;
usParser.RULE_while_block = 16;
usParser.RULE_conditional_expression = 17;
usParser.RULE_and_chained_conditional_expression = 18;
usParser.RULE_single_conditional_expression = 19;
usParser.RULE_return_statement = 20;
usParser.RULE_function_decl = 21;
usParser.RULE_function_call = 22;


function ProgramContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = usParser.RULE_program;
    return this;
}

ProgramContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ProgramContext.prototype.constructor = ProgramContext;

ProgramContext.prototype.START_PROGRAM = function() {
    return this.getToken(usParser.START_PROGRAM, 0);
};

ProgramContext.prototype.END_PROGRAM = function() {
    return this.getToken(usParser.END_PROGRAM, 0);
};

ProgramContext.prototype.meanie_instruction = function() {
    return this.getTypedRuleContext(Meanie_instructionContext,0);
};

ProgramContext.prototype.code_block = function() {
    return this.getTypedRuleContext(Code_blockContext,0);
};

ProgramContext.prototype.enterRule = function(listener) {
    if(listener instanceof usListener ) {
        listener.enterProgram(this);
	}
};

ProgramContext.prototype.exitRule = function(listener) {
    if(listener instanceof usListener ) {
        listener.exitProgram(this);
	}
};

ProgramContext.prototype.accept = function(visitor) {
    if ( visitor instanceof usVisitor ) {
        return visitor.visitProgram(this);
    } else {
        return visitor.visitChildren(this);
    }
};




usParser.ProgramContext = ProgramContext;

usParser.prototype.program = function() {

    var localctx = new ProgramContext(this, this._ctx, this.state);
    this.enterRule(localctx, 0, usParser.RULE_program);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 46;
        this.match(usParser.START_PROGRAM);
        this.state = 48;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if(_la===usParser.ASSIGNMENT) {
            this.state = 47;
            this.meanie_instruction();
        }

        this.state = 51;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << usParser.TRUE) | (1 << usParser.FALSE) | (1 << usParser.NULL) | (1 << usParser.VAR_DECL) | (1 << usParser.VAR_DECL_ASSGN) | (1 << usParser.VAR_CAST) | (1 << usParser.IF) | (1 << usParser.FOR) | (1 << usParser.WHILE) | (1 << usParser.RETURN))) !== 0) || ((((_la - 32)) & ~0x1f) == 0 && ((1 << (_la - 32)) & ((1 << (usParser.FUNCTION - 32)) | (1 << (usParser.FUNCTION_CALL - 32)) | (1 << (usParser.LPAREN - 32)) | (1 << (usParser.PLUS - 32)) | (1 << (usParser.MINUS - 32)) | (1 << (usParser.NUMBER - 32)) | (1 << (usParser.STRING - 32)) | (1 << (usParser.LABEL - 32)) | (1 << (usParser.COMMENT - 32)) | (1 << (usParser.MULTI_LINE_COMMENT - 32)))) !== 0)) {
            this.state = 50;
            this.code_block();
        }

        this.state = 53;
        this.match(usParser.END_PROGRAM);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function Meanie_instructionContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = usParser.RULE_meanie_instruction;
    return this;
}

Meanie_instructionContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
Meanie_instructionContext.prototype.constructor = Meanie_instructionContext;

Meanie_instructionContext.prototype.ASSIGNMENT = function() {
    return this.getToken(usParser.ASSIGNMENT, 0);
};

Meanie_instructionContext.prototype.MEANIE_PROGRAM = function() {
    return this.getToken(usParser.MEANIE_PROGRAM, 0);
};

Meanie_instructionContext.prototype.enterRule = function(listener) {
    if(listener instanceof usListener ) {
        listener.enterMeanie_instruction(this);
	}
};

Meanie_instructionContext.prototype.exitRule = function(listener) {
    if(listener instanceof usListener ) {
        listener.exitMeanie_instruction(this);
	}
};

Meanie_instructionContext.prototype.accept = function(visitor) {
    if ( visitor instanceof usVisitor ) {
        return visitor.visitMeanie_instruction(this);
    } else {
        return visitor.visitChildren(this);
    }
};




usParser.Meanie_instructionContext = Meanie_instructionContext;

usParser.prototype.meanie_instruction = function() {

    var localctx = new Meanie_instructionContext(this, this._ctx, this.state);
    this.enterRule(localctx, 2, usParser.RULE_meanie_instruction);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 55;
        this.match(usParser.ASSIGNMENT);
        this.state = 56;
        this.match(usParser.MEANIE_PROGRAM);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function Code_blockContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = usParser.RULE_code_block;
    return this;
}

Code_blockContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
Code_blockContext.prototype.constructor = Code_blockContext;

Code_blockContext.prototype.function_decl = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(Function_declContext);
    } else {
        return this.getTypedRuleContext(Function_declContext,i);
    }
};

Code_blockContext.prototype.statement = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(StatementContext);
    } else {
        return this.getTypedRuleContext(StatementContext,i);
    }
};

Code_blockContext.prototype.enterRule = function(listener) {
    if(listener instanceof usListener ) {
        listener.enterCode_block(this);
	}
};

Code_blockContext.prototype.exitRule = function(listener) {
    if(listener instanceof usListener ) {
        listener.exitCode_block(this);
	}
};

Code_blockContext.prototype.accept = function(visitor) {
    if ( visitor instanceof usVisitor ) {
        return visitor.visitCode_block(this);
    } else {
        return visitor.visitChildren(this);
    }
};




usParser.Code_blockContext = Code_blockContext;

usParser.prototype.code_block = function() {

    var localctx = new Code_blockContext(this, this._ctx, this.state);
    this.enterRule(localctx, 4, usParser.RULE_code_block);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 61;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while(_la===usParser.FUNCTION) {
            this.state = 58;
            this.function_decl();
            this.state = 63;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
        this.state = 65; 
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        do {
            this.state = 64;
            this.statement();
            this.state = 67; 
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        } while((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << usParser.TRUE) | (1 << usParser.FALSE) | (1 << usParser.NULL) | (1 << usParser.VAR_DECL) | (1 << usParser.VAR_DECL_ASSGN) | (1 << usParser.VAR_CAST) | (1 << usParser.IF) | (1 << usParser.FOR) | (1 << usParser.WHILE) | (1 << usParser.RETURN))) !== 0) || ((((_la - 37)) & ~0x1f) == 0 && ((1 << (_la - 37)) & ((1 << (usParser.FUNCTION_CALL - 37)) | (1 << (usParser.LPAREN - 37)) | (1 << (usParser.PLUS - 37)) | (1 << (usParser.MINUS - 37)) | (1 << (usParser.NUMBER - 37)) | (1 << (usParser.STRING - 37)) | (1 << (usParser.LABEL - 37)) | (1 << (usParser.COMMENT - 37)) | (1 << (usParser.MULTI_LINE_COMMENT - 37)))) !== 0));
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function StatementContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = usParser.RULE_statement;
    return this;
}

StatementContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
StatementContext.prototype.constructor = StatementContext;

StatementContext.prototype.comment = function() {
    return this.getTypedRuleContext(CommentContext,0);
};

StatementContext.prototype.expression = function() {
    return this.getTypedRuleContext(ExpressionContext,0);
};

StatementContext.prototype.declaration = function() {
    return this.getTypedRuleContext(DeclarationContext,0);
};

StatementContext.prototype.assignment = function() {
    return this.getTypedRuleContext(AssignmentContext,0);
};

StatementContext.prototype.condition_block = function() {
    return this.getTypedRuleContext(Condition_blockContext,0);
};

StatementContext.prototype.for_block = function() {
    return this.getTypedRuleContext(For_blockContext,0);
};

StatementContext.prototype.while_block = function() {
    return this.getTypedRuleContext(While_blockContext,0);
};

StatementContext.prototype.return_statement = function() {
    return this.getTypedRuleContext(Return_statementContext,0);
};

StatementContext.prototype.enterRule = function(listener) {
    if(listener instanceof usListener ) {
        listener.enterStatement(this);
	}
};

StatementContext.prototype.exitRule = function(listener) {
    if(listener instanceof usListener ) {
        listener.exitStatement(this);
	}
};

StatementContext.prototype.accept = function(visitor) {
    if ( visitor instanceof usVisitor ) {
        return visitor.visitStatement(this);
    } else {
        return visitor.visitChildren(this);
    }
};




usParser.StatementContext = StatementContext;

usParser.prototype.statement = function() {

    var localctx = new StatementContext(this, this._ctx, this.state);
    this.enterRule(localctx, 6, usParser.RULE_statement);
    try {
        this.state = 77;
        this._errHandler.sync(this);
        var la_ = this._interp.adaptivePredict(this._input,4,this._ctx);
        switch(la_) {
        case 1:
            this.enterOuterAlt(localctx, 1);
            this.state = 69;
            this.comment();
            break;

        case 2:
            this.enterOuterAlt(localctx, 2);
            this.state = 70;
            this.expression();
            break;

        case 3:
            this.enterOuterAlt(localctx, 3);
            this.state = 71;
            this.declaration();
            break;

        case 4:
            this.enterOuterAlt(localctx, 4);
            this.state = 72;
            this.assignment();
            break;

        case 5:
            this.enterOuterAlt(localctx, 5);
            this.state = 73;
            this.condition_block();
            break;

        case 6:
            this.enterOuterAlt(localctx, 6);
            this.state = 74;
            this.for_block();
            break;

        case 7:
            this.enterOuterAlt(localctx, 7);
            this.state = 75;
            this.while_block();
            break;

        case 8:
            this.enterOuterAlt(localctx, 8);
            this.state = 76;
            this.return_statement();
            break;

        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function CommentContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = usParser.RULE_comment;
    return this;
}

CommentContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
CommentContext.prototype.constructor = CommentContext;

CommentContext.prototype.COMMENT = function() {
    return this.getToken(usParser.COMMENT, 0);
};

CommentContext.prototype.MULTI_LINE_COMMENT = function() {
    return this.getToken(usParser.MULTI_LINE_COMMENT, 0);
};

CommentContext.prototype.enterRule = function(listener) {
    if(listener instanceof usListener ) {
        listener.enterComment(this);
	}
};

CommentContext.prototype.exitRule = function(listener) {
    if(listener instanceof usListener ) {
        listener.exitComment(this);
	}
};

CommentContext.prototype.accept = function(visitor) {
    if ( visitor instanceof usVisitor ) {
        return visitor.visitComment(this);
    } else {
        return visitor.visitChildren(this);
    }
};




usParser.CommentContext = CommentContext;

usParser.prototype.comment = function() {

    var localctx = new CommentContext(this, this._ctx, this.state);
    this.enterRule(localctx, 8, usParser.RULE_comment);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 79;
        _la = this._input.LA(1);
        if(!(_la===usParser.COMMENT || _la===usParser.MULTI_LINE_COMMENT)) {
        this._errHandler.recoverInline(this);
        }
        else {
        	this._errHandler.reportMatch(this);
            this.consume();
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function DeclarationContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = usParser.RULE_declaration;
    return this;
}

DeclarationContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
DeclarationContext.prototype.constructor = DeclarationContext;

DeclarationContext.prototype.VAR_DECL = function() {
    return this.getToken(usParser.VAR_DECL, 0);
};

DeclarationContext.prototype.LABEL = function() {
    return this.getToken(usParser.LABEL, 0);
};

DeclarationContext.prototype.VAR_DECL_ASSGN = function() {
    return this.getToken(usParser.VAR_DECL_ASSGN, 0);
};

DeclarationContext.prototype.assignment = function() {
    return this.getTypedRuleContext(AssignmentContext,0);
};

DeclarationContext.prototype.enterRule = function(listener) {
    if(listener instanceof usListener ) {
        listener.enterDeclaration(this);
	}
};

DeclarationContext.prototype.exitRule = function(listener) {
    if(listener instanceof usListener ) {
        listener.exitDeclaration(this);
	}
};

DeclarationContext.prototype.accept = function(visitor) {
    if ( visitor instanceof usVisitor ) {
        return visitor.visitDeclaration(this);
    } else {
        return visitor.visitChildren(this);
    }
};




usParser.DeclarationContext = DeclarationContext;

usParser.prototype.declaration = function() {

    var localctx = new DeclarationContext(this, this._ctx, this.state);
    this.enterRule(localctx, 10, usParser.RULE_declaration);
    try {
        this.state = 85;
        this._errHandler.sync(this);
        switch(this._input.LA(1)) {
        case usParser.VAR_DECL:
            this.enterOuterAlt(localctx, 1);
            this.state = 81;
            this.match(usParser.VAR_DECL);
            this.state = 82;
            this.match(usParser.LABEL);
            break;
        case usParser.VAR_DECL_ASSGN:
            this.enterOuterAlt(localctx, 2);
            this.state = 83;
            this.match(usParser.VAR_DECL_ASSGN);
            this.state = 84;
            this.assignment();
            break;
        default:
            throw new antlr4.error.NoViableAltException(this);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function AssignmentContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = usParser.RULE_assignment;
    return this;
}

AssignmentContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
AssignmentContext.prototype.constructor = AssignmentContext;

AssignmentContext.prototype.LABEL = function() {
    return this.getToken(usParser.LABEL, 0);
};

AssignmentContext.prototype.ASSIGNMENT = function() {
    return this.getToken(usParser.ASSIGNMENT, 0);
};

AssignmentContext.prototype.expression = function() {
    return this.getTypedRuleContext(ExpressionContext,0);
};

AssignmentContext.prototype.enterRule = function(listener) {
    if(listener instanceof usListener ) {
        listener.enterAssignment(this);
	}
};

AssignmentContext.prototype.exitRule = function(listener) {
    if(listener instanceof usListener ) {
        listener.exitAssignment(this);
	}
};

AssignmentContext.prototype.accept = function(visitor) {
    if ( visitor instanceof usVisitor ) {
        return visitor.visitAssignment(this);
    } else {
        return visitor.visitChildren(this);
    }
};




usParser.AssignmentContext = AssignmentContext;

usParser.prototype.assignment = function() {

    var localctx = new AssignmentContext(this, this._ctx, this.state);
    this.enterRule(localctx, 12, usParser.RULE_assignment);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 87;
        this.match(usParser.LABEL);
        this.state = 88;
        this.match(usParser.ASSIGNMENT);
        this.state = 89;
        this.expression();
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function ExpressionContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = usParser.RULE_expression;
    return this;
}

ExpressionContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ExpressionContext.prototype.constructor = ExpressionContext;

ExpressionContext.prototype.multiplying_expression = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(Multiplying_expressionContext);
    } else {
        return this.getTypedRuleContext(Multiplying_expressionContext,i);
    }
};

ExpressionContext.prototype.PLUS = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(usParser.PLUS);
    } else {
        return this.getToken(usParser.PLUS, i);
    }
};


ExpressionContext.prototype.MINUS = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(usParser.MINUS);
    } else {
        return this.getToken(usParser.MINUS, i);
    }
};


ExpressionContext.prototype.enterRule = function(listener) {
    if(listener instanceof usListener ) {
        listener.enterExpression(this);
	}
};

ExpressionContext.prototype.exitRule = function(listener) {
    if(listener instanceof usListener ) {
        listener.exitExpression(this);
	}
};

ExpressionContext.prototype.accept = function(visitor) {
    if ( visitor instanceof usVisitor ) {
        return visitor.visitExpression(this);
    } else {
        return visitor.visitChildren(this);
    }
};




usParser.ExpressionContext = ExpressionContext;

usParser.prototype.expression = function() {

    var localctx = new ExpressionContext(this, this._ctx, this.state);
    this.enterRule(localctx, 14, usParser.RULE_expression);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 91;
        this.multiplying_expression();
        this.state = 96;
        this._errHandler.sync(this);
        var _alt = this._interp.adaptivePredict(this._input,6,this._ctx)
        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
            if(_alt===1) {
                this.state = 92;
                _la = this._input.LA(1);
                if(!(_la===usParser.PLUS || _la===usParser.MINUS)) {
                this._errHandler.recoverInline(this);
                }
                else {
                	this._errHandler.reportMatch(this);
                    this.consume();
                }
                this.state = 93;
                this.multiplying_expression(); 
            }
            this.state = 98;
            this._errHandler.sync(this);
            _alt = this._interp.adaptivePredict(this._input,6,this._ctx);
        }

    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

